--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.fh</groupId>
-    <artifactId>pkg-scanner</artifactId>
+    <groupId>go.testing</groupId>
+    <artifactId>go-testing</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -22,7 +22,7 @@
 
     <build>
 
-        <finalName>pkg-scanner-1.0</finalName>
+        <finalName>go-testing-1.0</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
